[-] FO: Css fix #PSCSX-5408, TOS width on small devices

--- a/themes/default-bootstrap/sass/global.scss
+++ b/themes/default-bootstrap/sass/global.scss
@@ -27,6 +27,7 @@ body {
 	color: $base-body-color;
 	&.content_only {
 		background: none;
+		min-width: 0px;
 	}
 }
 
